[package]
name = "pom"
description = "A lightweight focus tool inspired by pomodoro"
authors = ["Dominic <dominic@hainstech.com>"]
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.7", features = ["derive"] }
notify-rust = { version = "4" }
