[package]
name = "pom-rs"
description = "A lightweight pomodoro focus tool with cross-platform desktop notifications on Linux, MacOS and Windows."
authors = ["Dominic Hains"]
version = "0.1.2"
edition = "2021"
keywords = ["focus", "pomodoro", "timer", "break", "work"]
categories = ["command-line-utilities"]
license = "GPL-3.0"
repository = "https://github.com/hainsdominic/pom"
homepage = "https://github.com/hainsdominic/pom"

[dependencies]
clap = { version = "3.1.7", features = ["derive"] }
notify-rust = { version = "4" }
